--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ bind C-space send-prefix
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 
 set -g @dracula-show-powerline true
