removed battery health

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,7 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
-set -g @dracula-plugins "cpu-usage ram-usage battery time"
-set -g @dracula-battery-label "Health"
+set -g @dracula-plugins "cpu-usage ram-usage time"
 set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
