--- a/tmux.conf
+++ b/tmux.conf
@@ -2,17 +2,16 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 
 unbind C-b
 set -g prefix C-space
+set -g base-index 1
+set -g mouse on
 bind C-space send-prefix
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+set -g @plugin 'wfxr/tmux-power'
 
-set -g @dracula-show-powerline true
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
-set -g @dracula-plugins "cpu-usage ram-usage time"
+set -g @tmux_power_theme 'gold'
 set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
