--- a/tmux.conf
+++ b/tmux.conf
@@ -9,9 +9,12 @@ bind C-space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'wfxr/tmux-power'
 
-set -g @tmux_power_theme 'gold'
+set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_zoom_id_style fsquare
+set -g @tokyo-night-tmux_pane_id_style fsquare
+
 set -g status-position top
 
 run '~/.tmux/plugins/tpm/tpm'
