--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @tokyo-night-tmux_window_id_style digital
-set -g @tokyo-night-tmux_zoom_id_style fsquare
-set -g @tokyo-night-tmux_pane_id_style fsquare
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style digital
 
 set -g status-position top
 
